<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MasterListas</string>
    <string name="listas">Lists</string>
    <string name="iniciar_sesion">Login</string>
    <string name="nom_usuario">Username or e-mail</string>
    <string name="pswd">Password</string>
    <string name="recordarme">Remember me</string>
    <string name="texto_recordar">Remember user data</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="mostrar_pswd">Show password</string>
    <string name="logo">logo</string>
    <string name="icono">icon</string>
    <string name="borrar">Delete</string>
    <string name="iniciar_sesion_facebook">Login with Facebook</string>
    <string name="iniciar_sesion_google">Login with Google</string>
    <string name="olvidado_pswd">I FORGOT MY PASSWORD</string>
    <string name="quiero_registrarme">I WANT TO REGISTER IN THE APPLICATION</string>
    <string name="masterlistas">MasterListas</string>
    <string name="url_curso">http://www.androidcurso.com</string>
    <string name="TODO">TODO</string>
    <string name="opc1"> Rewarded Video</string>
    <string name="opc2"> Option 2</string>
    <string name="opc3"> Option 3</string>
    <string name="acciones_adicionales">Additional actions</string>
    <string name="preferencias">Preferences</string>
    <string name="compartir">Share App</string>
    <string name="compartir_lista">Share List</string>
    <string name="compartir_logo">Share Logo</string>
    <string name="selecciona_app">Select application</string>
    <string name="please_rate">Please take a second for rate</string>
    <string name="rate_1">1. Love MasterListas, please rate 5 star in Play Store</string>
    <string name="rate_2">2. Have problems, please contact author to report issue</string>
    <string name="contactar_autor">CONTACT AUTHOR</string>
    <string name="rate_5stars">RATE 5 STAR</string>
    <string name="compartir_desarrollador">Share Developer</string>
    <string name="anuncio_no_disponible">Unavailable advertisement yet</string>
    <string name="drawer_open">Navigation drawer open</string>
    <string name="drawer_close">Navigation drawer close</string>
    <string name="descr_content_listas">Available lists in the app MasterListas</string>
    <string name="personal">Personal</string>
    <string name="trabajo">Work</string>
    <string name="elementos">Elements</string>
    <string name="comprar_articulo">Buy item</string>
    <string name="comprar_suscripcion">Buy Subscription</string>
    <string name="art_disponibles">Available items</string>
    <string name="suscrip_disponibles">Available subscriptions</string>
    <!--Transición-->
    <string name="transition_name_img">transition:IMG</string>
    <string name="transition_name_nombre">transition:IMG</string>
</resources>