<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_1"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/opc1" />
        <item android:id="@+id/nav_2"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/opc2"/>
        <item android:id="@+id/nav_3"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/opc3"/>
    </group>
    <item android:title="@string/acciones_adicionales">
        <menu>
            <item android:id="@+id/nav_preferencias"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/preferencias" />
            <item android:id="@+id/nav_compartir"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/compartir" />
            <item android:id="@+id/nav_compartir_lista"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/compartir_lista" />
            <item android:id="@+id/nav_compartir_logo"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/compartir_logo" />
            <item android:id="@+id/nav_compartir_desarrollador"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/compartir_desarrollador" />
            <item android:id="@+id/nav_articulo_no_recurrente"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/comprar_articulo" />
            <item android:id="@+id/nav_susbripcion"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/comprar_suscripcion" />
            <item android:id="@+id/nav_consulta_inapps_disponibles"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/art_disponibles" />
        </menu>
    </item>
</menu>