<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:transitionGroup="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom_usuario"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:transitionGroup="true"
        app:layout_constraintTop_toBottomOf="@+id/til_usuario"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pswd"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/recordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="loguearCheckbox"
        android:text="@string/recordarme"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_contraseña" />

    <CheckBox
        android:id="@+id/mostrar_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="mostrarContraseña"
        android:text="@string/mostrar_pswd"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/recordarme"
        app:layout_constraintTop_toTopOf="@+id/recordarme" />
</android.support.constraint.ConstraintLayout>
